新增接口 获取指定的namespace下的project内容
