# openapi/api/namespace.py
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 import connexion
-from openapi.service.namespace import create_namespace, namespace_list, delete_namespace
+from openapi.service.namespace import create_namespace, namespace_list, delete_namespace, get_namespace_detail_by_id
 from openapi.utils.exception_handle import DefalutError, IsExist, IsNotExist
 from flask import g
 
@@ -51,3 +51,20 @@ def delete(namespace_id):
         raise DefalutError(title=f'{e.title}', detail=f'{e.detail}', type=f'{e.type}')
     except Exception as e:
         raise DefalutError(title=f'删除namespace异常', detail=f'{e}')
+
+
+def detail(namespace_id):
+    '''
+
+    :param namespace_id: 被指定的namespace
+    :return:
+    '''
+    try:
+        data = get_namespace_detail_by_id(namespace_id)
+        return {
+            'data': data
+        }
+    except IsNotExist as e:
+        raise DefalutError(title=f'{e.title}', detail=f'{e.detail}', type=f'{e.type}')
+    except Exception as e:
+        raise DefalutError(title=f'根据namespace_id获取详情异常', detail=f'{e}')
